--- a/rtos_experiments/workspace/rtos_experiments/Makefile
+++ b/rtos_experiments/workspace/rtos_experiments/Makefile
@@ -16,7 +16,7 @@ USED_MODULES = lib_logging lib_xcore_c
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS = -O0 -g -DDEBUG_PRINT_ENABLE=1 -fxscope
+XCC_FLAGS = -Os -g -DDEBUG_PRINT_ENABLE=1 -fxscope
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
